@@ -46,5 +46,9 @@ run_by_user=
 # allow_hosts can ocur more than once, host can be hostname or ip address,
 # "*" means match all ip addresses, can use range like this: 10.0.1.[1-15] or
 # host0[1-8].domain.com
-allow_hosts=*
+allow_hosts=
+allow_hosts=h05-vm11.corp.cnb.yahoo.com
+allow_hosts=10.62.164.[99-128]
+allow_hosts=h[01-07]-vm10.corp.cnb.yahoo.com
+allow_hosts=1[0,1,2-4,03,].62.245.138
 
